# EventRing

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Event.h  EventHandler.cpp  EventHandler.h  EventType.h  EventTypes.h
tests/: CMakeLists.txt  main.cpp
